Fix sidebar scrolling with main div content overflow

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   padding: 0px;
   grid-template-columns: minmax(300px, 0.3fr) 1fr;
   grid-template-rows: 100vh;
+  overflow: hidden;
 }
 .logo {
   font-size: 1.5em;
@@ -36,6 +37,8 @@
   display: grid;
   grid-template-rows:auto auto 1fr auto;
   border-right:1px solid var(--gray-300);
+  scroll-behavior:unset;
+   
 }
 
 .sidebar ul {
@@ -157,6 +160,7 @@
 .main{
     display:grid;
     grid-template-rows:64px auto auto auto auto 1fr;
+    overflow: auto;
 }
 .main > *{
     padding-left:24px;
